test/pass/optargs/optarg_spectrum.lly
define f(
        a: *integer=10,
        b: *double=1.1,
        c: *bytestring=B"",
        d: *string="1")
{

}
