test/fail/optargs/optarg_too_many.lly
#[
SyntaxError: f expects 1 to 2 args, but got 3.
    from optarg_too_many.lly:10
]#

define f(a: integer, b: *integer = 10) {

}

f(1, 2, 3)
